ncp-features-example/2.5.1-http-rewrite-regex/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-rewrite-regex
  namespace: ncp-feature
  labels:
    feature: http-rewrite-regex 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: http-rewrite-regex
